--- a/HTML/index.html
+++ b/HTML/index.html
@@ -47,7 +47,7 @@
             width: 15%;
           }
         body {
-            background-image: url("Images/cool-background.png");
+            background-image: url("/Images/cool-background.png");
             width: auto;
         }
 
@@ -99,8 +99,8 @@
                                 <input type="checkbox" id="show-html">
                                 <label for="show-html">HTML Code</label>
                                 <ul>
-                                    <li><a href="insert_form.html">CREATE DB</a></li>
-                                    <li><a href="Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
+                                    <li><a href="/insert_form.html">CREATE DB</a></li>
+                                    <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
                                     <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
                                     <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
                                     <li><a href="sortDemo.html">Sort Demo</a></li>
@@ -184,7 +184,7 @@
                     <ul>
                         <h1><strong>Index</strong></h1><hr>
                         <h2><strong>HTML</strong></h2>
-                        <li><hr><a href="/420710/Facts_About_Snowboarding.html">Facts about Snowboarding </a></li>
+                        <li><hr><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding </a></li>
                         <li><a href="/420710/Facts_About_Apples.html">Facts about Apples </a></li>
                         <li><a href="/420710/Facts_About_Sushi.html">Facts about Sushi </a></li>
                         <li><a href="/420710/Ski_Maps.html">Ski Maps</a></li>
@@ -238,14 +238,14 @@
                     <table>
                         <tbody>
                             <tr>
-                                <td><img src="Images/Jenny and Me.jpg" width="200" height="150"></td>
-                                <td><img src="Images/Mimi and Pappy.JPG" width="200" height="150"></td>
-                                <td><img src="Images/Snorboarding.JPG" width="200" height="150"></td>
+                                <td><img src="/Images/Jenny and Me.jpg" width="200" height="150"></td>
+                                <td><img src="/Images/Mimi and Pappy.JPG" width="200" height="150"></td>
+                                <td><img src="/Images/Snorboarding.JPG" width="200" height="150"></td>
                             </tr>
                             <tr>
-                                <td><img src="Images/Photo of Me.jpeg" width="200" height="20"></td>
-                                <td><img src="Images/Me with Dolphin.jpg" width="200" height="150"></td>
-                                <td><img src="Images/Monkey.JPG" width="200" height="150"></td>
+                                <td><img src="/Images/Photo of Me.jpeg" width="200" height="20"></td>
+                                <td><img src="/Images/Me with Dolphin.jpg" width="200" height="150"></td>
+                                <td><img src="/Images/Monkey.JPG" width="200" height="150"></td>
                             </tr>
                         </tbody>
                     </table>
