Cleaned up CSS code for cleaner menu format, Updated Links

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -93,35 +93,35 @@
                     <div class="menu_content">
                         <div class="logo"><a href="#">CaLove</a></div>
                         <ul class="links">
-                            <li><a href="/420710/index.html">Home</a></li>
+                            <li><a class="desktop-link" href="/HTML/index.html">Home</a></li>
                             <li>
                                 <a href="#" class="desktop-link">HTML Code</a>
                                 <input type="checkbox" id="show-html">
                                 <label for="show-html">HTML Code</label>
-                                <ul>
-                                    <li><a href="/insert_form.html">CREATE DB</a></li>
+                                <ul class="dropdown-container">
+                                    <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
                                     <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="cards.html">Card Demo</a></li>
-                                    <li><a href="keypress.html">KeyPress Demo</a></li>
-                                    <li><a href="prime.html">Prime Numbers</a></li>
-                                    <li><a href="jQueryDemo.html">jQuery Demo</a></li>
-                                    <li><a href="dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                                    <li><a href="AJAXandPHP.html">AJAX and PHP Demo</a></li>
-                                    <li><a href="audioDemo.html">Audio Demo</a></li>
-                                    <li><a href="DMMTExamples.html">DMMT Examples</a></li>
-                                    <li><a href="pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
+                                    <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples</a></li>
+                                    <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi</a></li>
+                                    <li><a href="/HTML/sortDemo.html">Sort Demo</a></li>
+                                    <li><a href="/HTML/ButtonMove.html">Moving Buttons</a></li>
+                                    <li><a href="/HTML/cards.html">Card Demo</a></li>
+                                    <li><a href="/HTML/keypress.html">KeyPress Demo</a></li>
+                                    <li><a href="/HTML/prime.html">Prime Numbers</a></li>
+                                    <li><a href="/HTML/jQueryDemo.html">jQuery Demo</a></li>
+                                    <li><a href="/HTML/dynamicCardDemo.html">Dynamic Card Demo</a></li>
+                                    <li><a href="/HTML/AJAXandPHP.html">AJAX and PHP Demo</a></li>
+                                    <li><a href="/HTML/audioDemo.html">Audio Demo</a></li>
+                                    <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
+                                    <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
                                     <li>
                                         <a href="#" class="desktop-link">HTML with Pictures</a>
                                         <input type="checkbox" id="show-htmlp">
                                         <label for="show-htmlp">HTML with Pictures</label>
                                         <ul>
-                                            <li><a href="Ski_Maps.html">Ski Maps</a></li>
-                                            <li><a href="Apple_Pictures.html">More Apple Pictures</a></li>
-                                            <li><a href="Sushi_Pictures.html">More Sushi Pictures</a></li>
+                                            <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
+                                            <li><a href="/HTML/Apple_Pictures.html">More Apple Pictures</a></li>
+                                            <li><a href="/HTML/Sushi_Pictures.html">More Sushi Pictures</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -130,10 +130,10 @@
                                 <a href="#" class="desktop-link">CSS Code</a>
                                 <input type="checkbox" id="show-css">
                                 <label for="show-css">CSS Code</label>
-                                <ul>
-                                    <li><a href="layout.css">layout.css</a></li>
-                                    <li><a href="ButtonMove.css">ButtonMove.css</a></li>
-                                    <li><a href="prime.css">prime.css</a></li>
+                                <ul class="dropdown-container">
+                                    <li><a href="/CSS/layout.css">layout.css</a></li>
+                                    <li><a href="/CSS/ButtonMove.css">ButtonMove.css</a></li>
+                                    <li><a href="/CSS/prime.css">prime.css</a></li>
                                     <li><a href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font File</a></li>
                                 </ul>
                             </li>
@@ -141,7 +141,7 @@
                                 <a href="#" class="desktop-link">JavaScript Code</a>
                                 <input type="checkbox" id="show-js">
                                 <label for="show-js">JavaScript Code</label>
-                                <ul>
+                                <ul class="dropdown-container">
                                     <li><a href="seestore_withJS.php.html">FINAL PROJECT</a></li>
                                     <li><a href="chapter04.html">Chapter04.html</a></li>
                                     <li><a href="ButtonMove.js">ButtonMove.js</a></li>
@@ -154,7 +154,7 @@
                                 <a href="#" class="desktop-link">PHP Code</a>
                                 <input type="checkbox" id="show-php">
                                 <label for="show-php">PHP Code</label>
-                                <ul>
+                                <ul class="dropdown-container">
                                     <li><a href="pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
                                     <li><a href="Exam2.php">Exam2.php</a></li>
                                     <li><a href="helloworld.php">Helloworld.php</a></li>
