Updated Facts_About_Snowboarding.html format

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -185,34 +185,34 @@
                         <h1><strong>Index</strong></h1><hr>
                         <h2><strong>HTML</strong></h2>
                         <li><hr><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding </a></li>
-                        <li><a href="/420710/Facts_About_Apples.html">Facts about Apples </a></li>
-                        <li><a href="/420710/Facts_About_Sushi.html">Facts about Sushi </a></li>
-                        <li><a href="/420710/Ski_Maps.html">Ski Maps</a></li>
-                        <li><a href="/420710/Apple_Pictures.html">More Apple Pictures</a></li>
-                        <li><a href="/420710/Sushi_Pictures.html">More Sushi Pictures</a></li>
-                        <li><a href="/420710/sortDemo.html">Sort Demo</a></li>
-                        <li><a href="/420710/ButtonMove.html">Moving Buttons</a></li>
-                        <li><a href="/420710/cards.html">Card Demo</a></li>
-                        <li><a href="/420710/keypress.html">keyPress Demo</a></li>
-                        <li><a href="/420710/prime.html">Prime Numbers</a></li>
-                        <li><a href="/420710/jQueryDemo.html">jQuery Demo</a></li>
-                        <li><a href="/420710/dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                        <li><a href="/420710/AJAXandPHP.html">AJAX and PHP Demo</a></li>
-                        <li><a href="/420710/audioDemo.html">Audio Demo</a></li>
-                        <li><a href="/420710/DMMTExamples.html">DMMT Examples</a></li>
-                        <li><a href="/420710/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
-                        <li><a href="/420710/insert_form.html">CREATE DB</a></li>
+                        <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples </a></li>
+                        <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi </a></li>
+                        <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
+                        <li><a href="/HTML/Apple_Pictures.html">More Apple Pictures</a></li>
+                        <li><a href="/HTML/Sushi_Pictures.html">More Sushi Pictures</a></li>
+                        <li><a href="/HTML/sortDemo.html">Sort Demo</a></li>
+                        <li><a href="/HTML/ButtonMove.html">Moving Buttons</a></li>
+                        <li><a href="/HTML/cards.html">Card Demo</a></li>
+                        <li><a href="/HTML/keypress.html">keyPress Demo</a></li>
+                        <li><a href="/HTML/prime.html">Prime Numbers</a></li>
+                        <li><a href="/HTML/jQueryDemo.html">jQuery Demo</a></li>
+                        <li><a href="/HTML/dynamicCardDemo.html">Dynamic Card Demo</a></li>
+                        <li><a href="/HTML/AJAXandPHP.html">AJAX and PHP Demo</a></li>
+                        <li><a href="/HTML/audioDemo.html">Audio Demo</a></li>
+                        <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
+                        <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
+                        <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
                         <hr>
                     </ul>
 
                     <ul>
                         <h2><strong>JavaScript</strong></h2>
-                        <li><a href="/420710/seestore_withJS.php.html">FINAL PROJECT</a></li>
-                        <li><hr><a href="/420710/chapter04.html">Chapter04.html</a></li>
-                        <li><a href="/420710/ButtonMove.js">ButtonMove.js</a></li>
-                        <li><a href="/420710/cards.js">cards.js</a></li>
-                        <li><a href="/420710/prime.js">prime.js</a></li>
-                        <li><a href="/420710/JS/loops.js">loops.js</a><hr></li>
+                        <li><a href="/onlineStore/seestore_withJS.php.html">FINAL PROJECT</a></li>
+                        <li><hr><a href="/HTML/chapter04.html">Chapter04.html</a></li>
+                        <li><a href="/JS/ButtonMove.js">ButtonMove.js</a></li>
+                        <li><a href="/JS/cards.js">cards.js</a></li>
+                        <li><a href="/JS/prime.js">prime.js</a></li>
+                        <li><a href="/JS/loops.js">loops.js</a><hr></li>
                     </ul>
 
                     <ul>
