Updated Search Bar formatting

--- a/HTML/Facts_About_Snowboarding.html
+++ b/HTML/Facts_About_Snowboarding.html
@@ -187,10 +187,11 @@
         </div>
         <div class="right_side">
             <ul>
-                <li><a href="/420710//Ski_Maps.html">Ski Maps Link</a></li>
-                <li><a href="/420710//Facts_About_Apples.html">Link to Facts about Apples</a></li>
-                <li><a href="/420710//Facts_About_Sushi.html">Link to Facts about Sushi</a></li>
-                <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li>
+                <div class="navHead"><h1><strong>Links</strong></h1><hr>
+                <li><a href="/HTML/Ski_Maps.html">Ski Maps Link</a></li><hr>
+                <li><a href="/HTML/Facts_About_Apples.html">Link to Facts about Apples</a></li><hr>
+                <li><a href="/HTML/Facts_About_Sushi.html">Link to Facts about Sushi</a></li><hr>
+                <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li><hr>
             </ul>
         </div>
     </div>
