--- a/HTML/Facts_About_Apples.html
+++ b/HTML/Facts_About_Apples.html
@@ -7,14 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Facts About Apples!</title>
-    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
+        h1 {
+            text-align: center;
+        }
         .content_area {
-            width: 100%;
+            margin-top: 20px;
+            box-sizing: border-box;
             flex-direction: column;
             display: flex;
-            padding-top: 70px;
         }
         #facts{
             top: 0px;
@@ -39,30 +42,35 @@
                     <div class="menu_content">
                         <div class="logo"><a href="#">CaLove</a></div>
                         <ul class="links">
-                            <li><a href="/420710/index.html">Home</a></li>
+                            <li><a class="desktop-link" href="/HTML/index.html">Home</a></li>
                             <li>
                                 <a href="#" class="desktop-link">HTML Code</a>
                                 <input type="checkbox" id="show-html">
                                 <label for="show-html">HTML Code</label>
-                                <ul>
-                                    <li><a href="Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="cards.html">Card Demo</a></li>
-                                    <li><a href="keypress.html">KeyPress Demo</a></li>
-                                    <li><a href="prime.html">Prime Numbers</a></li>
-                                    <li><a href="dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                                    <li><a href="jQueryDemo.html">jQuery Demo</a></li>
+                                <ul class="dropdown-container">
+                                    <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
+                                    <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
+                                    <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples</a></li>
+                                    <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi</a></li>
+                                    <li><a href="/HTML/sortDemo.html">Sort Demo</a></li>
+                                    <li><a href="/HTML/ButtonMove.html">Moving Buttons</a></li>
+                                    <li><a href="/HTML/cards.html">Card Demo</a></li>
+                                    <li><a href="/HTML/keypress.html">KeyPress Demo</a></li>
+                                    <li><a href="/HTML/prime.html">Prime Numbers</a></li>
+                                    <li><a href="/HTML/jQueryDemo.html">jQuery Demo</a></li>
+                                    <li><a href="/HTML/dynamicCardDemo.html">Dynamic Card Demo</a></li>
+                                    <li><a href="/HTML/AJAXandPHP.html">AJAX and PHP Demo</a></li>
+                                    <li><a href="/HTML/audioDemo.html">Audio Demo</a></li>
+                                    <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
+                                    <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
                                     <li>
                                         <a href="#" class="desktop-link">HTML with Pictures</a>
                                         <input type="checkbox" id="show-htmlp">
                                         <label for="show-htmlp">HTML with Pictures</label>
                                         <ul>
-                                            <li><a href="Ski_Maps.html">Ski Maps</a></li>
-                                            <li><a href="Apple_Pictures.html">More Apple Pictures</a></li>
-                                            <li><a href="Sushi_Pictures.html">More Sushi Pictures</a></li>
+                                            <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
+                                            <li><a href="/HTML/Apple_Pictures.html">More Apple Pictures</a></li>
+                                            <li><a href="/HTML/Sushi_Pictures.html">More Sushi Pictures</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -71,20 +79,19 @@
                                 <a href="#" class="desktop-link">CSS Code</a>
                                 <input type="checkbox" id="show-css">
                                 <label for="show-css">CSS Code</label>
-                                <ul>
-                                    <li><a href="layout.css">layout.css</a></li>
-                                    <li><a href="ButtonMove.css">ButtonMove.css</a></li>
-                                    <li><a href="prime.css">prime.css</a></li>
-                                    <li><a
-                                            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font
-                                            File</a></li>
+                                <ul class="dropdown-container">
+                                    <li><a href="/CSS/layout.css">layout.css</a></li>
+                                    <li><a href="/CSS/ButtonMove.css">ButtonMove.css</a></li>
+                                    <li><a href="/CSS/prime.css">prime.css</a></li>
+                                    <li><a href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font File</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#" class="desktop-link">JavaScript Code</a>
                                 <input type="checkbox" id="show-js">
                                 <label for="show-js">JavaScript Code</label>
-                                <ul>
+                                <ul class="dropdown-container">
+                                    <li><a href="seestore_withJS.php.html">FINAL PROJECT</a></li>
                                     <li><a href="chapter04.html">Chapter04.html</a></li>
                                     <li><a href="ButtonMove.js">ButtonMove.js</a></li>
                                     <li><a href="cards.js">cards.js</a></li>
@@ -96,8 +103,14 @@
                                 <a href="#" class="desktop-link">PHP Code</a>
                                 <input type="checkbox" id="show-php">
                                 <label for="show-php">PHP Code</label>
-                                <ul>
+                                <ul class="dropdown-container">
+                                    <li><a href="pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
+                                    <li><a href="Exam2.php">Exam2.php</a></li>
                                     <li><a href="helloworld.php">Helloworld.php</a></li>
+                                    <li><a href="IO_app.php">PHP File I/O App</a></li>
+                                    <li><a href="seestore.php">seestore.php</a></li>
+                                    <li><a href="seestore_withJS.php">seestore_withJS.php</a></li>
+                                    <li><a href="showitem.php">showitem.php</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -116,9 +129,9 @@
     <div class="wrapper">
         <div class="content_area">
             <div id="Header-Image-Row">
-                <img src="/420710/Images/applebucket.jpg" alt="applebucket" width="200">
-                <img src="/420710/Images/green-apples.jpg" alt="green-apples.jpg" width="200">
-                <img src="/420710/Images/apples.jpg" alt="apples.jpg" width="200">
+                <img src="/Images/applebucket.jpg" alt="applebucket" width="200">
+                <img src="/Images/green-apples.jpg" alt="green-apples.jpg" width="200">
+                <img src="/Images/apples.jpg" alt="apples.jpg" width="200">
             </div>
             <div id="facts">
                 <h1>5 Facts About Apples
@@ -139,7 +152,7 @@
                         </li>
                     </ol>
                 </nav>
-                <img id="appletree" src="/420710/Images/appletree.jpg" alt="appletree" width="200"><br><br>
+                <img id="appletree" src="/Images/appletree.jpg" alt="appletree" width="200"><br><br>
             </div>
 
             <div id="ratings">
@@ -160,21 +173,23 @@
         <div class="left_side">
             <ul>
                 <div class="navHead"><h1><strong>Sections</strong></h1><hr>
-                <li><a href="#facts">Facts</a></li>
-                <li><a href="#ratings">Ratings</a></li>
-                <li><a href="/420710/index.html">Home</a><br></li>
-                <li><a href="mailto:calove@g.clemson.edu">Email</a></li></div>
+                    <li><a href="#facts">Facts</a></li><hr>
+                    <li><a href="#ratings">Ratings</a></li><hr>
+                    <li><a href="/HTML/index.html">Home</a><br></li><hr>
+                    <li><a href="mailto:calove@g.clemson.edu">Email</a></li><hr>
+                </div>
             </ul>
         </div>
         <div class="right_side">
             <ul>
-                <li><a href="/420710/Apple_Pictures.html">Link to More Apple Pictures</a></li>
-                <li><a href="/420710/Facts_About_Snowboarding.html">Link to Facts about Snowboarding </a></li>
-                <li><a href="/420710/Facts_About_Sushi.html">Link to Facts about Sushi </a></li>
-                <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li>
+                <div class="navHead"><h1><strong>Links</strong></h1><hr>
+                    <li><a href="/420710/Apple_Pictures.html">Link to More Apple Pictures</a></li><hr>
+                    <li><a href="/420710/Facts_About_Snowboarding.html">Link to Facts about Snowboarding </a></li><hr>
+                    <li><a href="/420710/Facts_About_Sushi.html">Link to Facts about Sushi </a></li><hr>
+                    <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li><hr>
+                </div>
             </ul>
         </div>
-    </div>
     <footer>|Created by calove (5/28/2023)|</footer>
 </body>
 
