--- a/HTML/Facts_About_Snowboarding.html
+++ b/HTML/Facts_About_Snowboarding.html
@@ -177,12 +177,12 @@
         </div>
 
         <div class="left_side">
-            
             <ul>
                 <div class="navHead"><h1><strong>Sections</strong></h1><hr>
                     <li><a href="#facts">Facts</a></li>
                     <li><a href="#ratings">Ratings</a></li>
                     <li><a href="/420710/index.html">Back to Index</a></li>
+                </div>
             </ul>
         </div>
         <div class="right_side">
