Updated formatting for "about.html" and "index.html"

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,10 +54,6 @@
             width: 15%;
         }
 
-        body {
-            background-image: url("/Images/cool-background.png");
-            width: auto;
-        }
     </style>
 </head>
 
@@ -73,9 +69,8 @@
                         <h1><strong>Index</strong></h1>
                         <hr>
                         <h2><strong>HTML</strong></h2>
-                        <li>
-                            <hr><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding </a>
-                        </li>
+                        <hr>
+                        <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding </a></li>
                         <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples </a></li>
                         <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi </a></li>
                         <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
@@ -98,16 +93,15 @@
 
                     <ul>
                         <h2><strong>JavaScript</strong></h2>
+                        <hr>
                         <li><a href="/onlineStore/seestore_withJS.php.html">FINAL PROJECT</a></li>
-                        <li>
-                            <hr><a href="/HTML/chapter04.html">Chapter04.html</a>
+                        <li><a href="/HTML/chapter04.html">Chapter04.html</a>
                         </li>
                         <li><a href="/JS/ButtonMove.js">ButtonMove.js</a></li>
                         <li><a href="/JS/cards.js">cards.js</a></li>
                         <li><a href="/JS/prime.js">prime.js</a></li>
-                        <li><a href="/JS/loops.js">loops.js</a>
-                            <hr>
-                        </li>
+                        <li><a href="/JS/loops.js">loops.js</a></li>
+                        <hr>
                     </ul>
 
                     <ul>
@@ -125,13 +119,12 @@
 
                     <ul>
                         <h2><strong>CSS</strong></h2>
-                        <li>
-                            <hr><a href="/420710/chapter04.html">Chapter04.html</a>
-                        </li>
+                        <hr>
+                        <li><a href="/420710/chapter04.html">Chapter04.html</a></li>
                         <li><a href="/420710/cards.css">cards.css</a></li>
                         <li><a href="/420710/prime.css">prime.css</a>
-                            <hr>
                         </li>
+                        <hr>
                     </ul>
 
                     <table>
