Updated Navbar and formatting for "Facts_About_Snowboarding.html" and "Facts_About_Sushi.html"

--- a/HTML/Facts_About_Sushi.html
+++ b/HTML/Facts_About_Sushi.html
@@ -7,98 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Facts About Sushi!</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="/CSS/layout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <style>
-        #facts, #ratings {
-            margin-top: auto;
-        }
         .content_area {
-            background-image: url("/420710/Images/cool-background.png");
-            overflow-y: auto;
+            height: 1000px;
+            margin-top: 20px;
+            box-sizing: border-box;
+            flex-direction: column;
+            display: flex;
+            overflow-y: visible;
+        }
+
+        #facts {
+            position: relative;
+            width: 100%;
+        }
+
+        #ratings {
+            position: relative;
+            height: fit-content;
         }
     </style>
 </head>
 
 <body>
+    <!--Navbar Menu-->
     <header>
-        <div class="header">
-            <div class="menu">
-                <nav>
-                    <input type="checkbox" id="show-search">
-                    <input type="checkbox" id="show-menu">
-                    <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-                    <div class="menu_content">
-                        <div class="logo"><a href="#">CaLove</a></div>
-                        <ul class="links">
-                            <li><a href="/420710/index.html">Home</a></li>
-                            <li>
-                                <a href="#" class="desktop-link">HTML Code</a>
-                                <input type="checkbox" id="show-html">
-                                <label for="show-html">HTML Code</label>
-                                <ul>
-                                    <li><a href="Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="cards.html">Card Demo</a></li>
-                                    <li><a href="keypress.html">KeyPress Demo</a></li>
-                                    <li>
-                                        <a href="#" class="desktop-link">HTML with Pictures</a>
-                                        <input type="checkbox" id="show-htmlp">
-                                        <label for="show-htmlp">HTML with Pictures</label>
-                                        <ul>
-                                            <li><a href="Ski_Maps.html">Link to Ski Maps</a></li>
-                                            <li><a href="Apple_Pictures.html">More Apple Pictures</a></li>
-                                            <li><a href="Sushi_Pictures.html">More Sushi Pictures</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">CSS Code</a>
-                                <input type="checkbox" id="show-css">
-                                <label for="show-css">CSS Code</label>
-                                <ul>
-                                    <li><a href="layout.css">layout.css</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">JavaScript Code</a>
-                                <input type="checkbox" id="show-js">
-                                <label for="show-js">JavaScript Code</label>
-                                <ul>
-                                    <li><a href="chapter04.html">Chapter04.html</a></li>
-                                    <li><a href="cards.js">cards.js</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">PHP Code</a>
-                                <input type="checkbox" id="show-php">
-                                <label for="show-php">PHP Code</label>
-                                <ul>
-                                    <li><a href="helloworld.php">Helloworld.php</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-                    <form action="#" class="search-box">
-                        <input type="text" placeholder="Type Something to Search..." required>
-                        <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-                    </form>
-                </nav>
-            </div>
-        </div>
+        <div class="header" id="navbar"></div>
     </header>
 
     <div class="wrapper">
         <div class="content_area">
             <div id="Header-Image-Row">
-                <img src="/420710/Images/sushi (1).jpg" alt="sushi (1)" width="200">
-                <img src="/420710/Images/sushi (2).jpg" alt="sushi (2)" width="200">
-                <img src="/420710/Images/sushi (3).jpg" alt="sushi (3)" width="200">
+                <img src="/Images/sushi (1).jpg" alt="sushi (1)" width="200">
+                <img src="/Images/sushi (2).jpg" alt="sushi (2)" width="200">
+                <img src="/Images/sushi (3).jpg" alt="sushi (3)" width="200">
             </div>
 
             <div id="facts">
@@ -120,7 +64,7 @@
                         </li>
                     </ol>
                 </nav>
-                <img id="sushi4" src="/420710/Images/sushi (4).jpg" alt="sushi (4)" width="200"><br><br>
+                <img id="sushi4" src="/Images/sushi (4).jpg" alt="sushi (4)" width="200"><br><br>
             </div>
 
             <div id="ratings">
@@ -138,23 +82,56 @@
 
         <div class="left_side">
             <ul>
-                <div class="navHead"><h1><strong>Sections</strong></h1><hr>
-                <li><a href="#facts">Facts</a></li>
-                <li><a href="#ratings">Ratings</a></li>
-                <li><a href="/420710/index.html">Home</a><br></li>
-                <li><a href="mailto:calove@g.clemson.edu">Email</a></li></div>
+                <div class="navHead">
+                    <h1><strong>Sections</strong></h1>
+                    <hr>
+                    <li><a href="#facts">Facts</a></li>
+                    <hr>
+                    <li><a href="#ratings">Ratings</a></li>
+                    <hr>
+                    <li><a href="/HTML/index.html">Back to Index</a></li>
+                    <hr>
             </ul>
         </div>
         <div class="right_side">
             <ul>
-                <li><a href="/420710//Sushi_Pictures.html">Link to More Sushi Pictures</a></li>
-                <li><a href="/420710/Facts_About_Apples.html">Link to Facts About Apples</a></li>
-                <li><a href="/420710/Facts_About_Snowboarding.html">Link to Facts about Snowboarding </a></li>
-                <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li>
+                <div class="navHead">
+                    <h1><strong>Links</strong></h1>
+                    <hr>
+                    <li><a href="/HTML/Sushi_Pictures.html">Link to More Sushi Pictures</a></li>
+                    <hr>
+                    <li><a href="/HTML/Facts_About_Apples.html">Link to Facts About Apples</a></li>
+                    <hr>
+                    <li><a href="/HTML/Facts_About_Snowboarding.html">Link to Facts about Snowboarding </a></li>
+                    <hr>
+                    <li><a href="mailto:calove@g.clemson.edu">Email me if you have any questions.</a></li>
+                    <hr>
             </ul>
         </div>
     </div>
     <footer>|© Created by calove (5/28/2023)|</footer>
+
+    <script>
+        // Fetch the content of menu.html and insert it into the div with id "navbar"
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                // Create a temporary element to parse the fetched HTML
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = data;
+
+                // Find the menu div within the fetched content
+                const menuContent = tempDiv.querySelector('.menu');
+
+                // Insert the menu content into the header div if it exists
+                if (menuContent) {
+                    document.getElementById('navbar').appendChild(menuContent);
+                } else {
+                    console.error('Menu content not found in menu.html');
+                }
+            })
+            .catch(error => console.error('Error loading the navbar:', error));
+    </script>
 </body>
 
 </html>
