--- a/HTML/Facts_About_Snowboarding.html
+++ b/HTML/Facts_About_Snowboarding.html
@@ -34,100 +34,8 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="header">
-            <!--MENU-->
-            <div class="menu">
-                <nav>
-                    <input type="checkbox" id="show-search">
-                    <input type="checkbox" id="show-menu">
-                    <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-                    <div class="menu_content">
-                        <div class="logo"><a href="#">CaLove</a></div>
-                        <ul class="links">
-                            <li><a class="desktop-link" href="/HTML/index.html">Home</a></li>
-                            <li>
-                                <a href="#" class="desktop-link">HTML Code</a>
-                                <input type="checkbox" id="show-html">
-                                <label for="show-html">HTML Code</label>
-                                <ul class="dropdown-container">
-                                    <li><a href="/HTML/insert_form.html">CREATE DB</a></li>
-                                    <li><a href="/HTML/Facts_About_Snowboarding.html">Facts about Snowboarding</a></li>
-                                    <li><a href="/HTML/Facts_About_Apples.html">Facts about Apples</a></li>
-                                    <li><a href="/HTML/Facts_About_Sushi.html">Facts about Sushi</a></li>
-                                    <li><a href="/HTML/sortDemo.html">Sort Demo</a></li>
-                                    <li><a href="/HTML/ButtonMove.html">Moving Buttons</a></li>
-                                    <li><a href="/HTML/cards.html">Card Demo</a></li>
-                                    <li><a href="/HTML/keypress.html">KeyPress Demo</a></li>
-                                    <li><a href="/HTML/prime.html">Prime Numbers</a></li>
-                                    <li><a href="/HTML/jQueryDemo.html">jQuery Demo</a></li>
-                                    <li><a href="/HTML/dynamicCardDemo.html">Dynamic Card Demo</a></li>
-                                    <li><a href="/HTML/AJAXandPHP.html">AJAX and PHP Demo</a></li>
-                                    <li><a href="/HTML/audioDemo.html">Audio Demo</a></li>
-                                    <li><a href="/HTML/DMMTExamples.html">DMMT Examples</a></li>
-                                    <li><a href="/HTML/pokemon_collect_app_p1.html">Collect App Phase 1</a></li>
-                                    <li>
-                                        <a href="#" class="desktop-link">HTML with Pictures</a>
-                                        <input type="checkbox" id="show-htmlp">
-                                        <label for="show-htmlp">HTML with Pictures</label>
-                                        <ul>
-                                            <li><a href="/HTML/Ski_Maps.html">Ski Maps</a></li>
-                                            <li><a href="/HTML/Apple_Pictures.html">More Apple Pictures</a></li>
-                                            <li><a href="/HTML/Sushi_Pictures.html">More Sushi Pictures</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">CSS Code</a>
-                                <input type="checkbox" id="show-css">
-                                <label for="show-css">CSS Code</label>
-                                <ul class="dropdown-container">
-                                    <li><a href="/CSS/layout.css">layout.css</a></li>
-                                    <li><a href="/CSS/ButtonMove.css">ButtonMove.css</a></li>
-                                    <li><a href="/CSS/prime.css">prime.css</a></li>
-                                    <li><a href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">Font File</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">JavaScript Code</a>
-                                <input type="checkbox" id="show-js">
-                                <label for="show-js">JavaScript Code</label>
-                                <ul class="dropdown-container">
-                                    <li><a href="seestore_withJS.php.html">FINAL PROJECT</a></li>
-                                    <li><a href="chapter04.html">Chapter04.html</a></li>
-                                    <li><a href="ButtonMove.js">ButtonMove.js</a></li>
-                                    <li><a href="cards.js">cards.js</a></li>
-                                    <li><a href="prime.js">prime.js</a></li>
-                                    <li><a href="loops.js">loops.js</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="desktop-link">PHP Code</a>
-                                <input type="checkbox" id="show-php">
-                                <label for="show-php">PHP Code</label>
-                                <ul class="dropdown-container">
-                                    <li><a href="pokemon_collect_app_p2.php">Collect App Phase 2</a></li>
-                                    <li><a href="Exam2.php">Exam2.php</a></li>
-                                    <li><a href="helloworld.php">Helloworld.php</a></li>
-                                    <li><a href="IO_app.php">PHP File I/O App</a></li>
-                                    <li><a href="seestore.php">seestore.php</a></li>
-                                    <li><a href="seestore_withJS.php">seestore_withJS.php</a></li>
-                                    <li><a href="showitem.php">showitem.php</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                    <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-                    <form action="#" class="search-box">
-                        <input type="text" placeholder="Type Something to Search..." required>
-                        <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-                    </form>
-                </nav>
-            </div>
-            <!--END OF MENU-->
-        </div>
-    </header>
+    <!--Navbar Menu-->
+    <header><div class="header" id="navbar"></div></header>
 
     <div class="wrapper">
         <div class="content_area">
@@ -181,7 +89,7 @@
                 <div class="navHead"><h1><strong>Sections</strong></h1><hr>
                     <li><a href="#facts">Facts</a></li>
                     <li><a href="#ratings">Ratings</a></li>
-                    <li><a href="/420710/index.html">Back to Index</a></li>
+                    <li><a href="/HTML/index.html">Back to Index</a></li>
                 </div>
             </ul>
         </div>
@@ -196,6 +104,28 @@
             </ul>
         </div>
     <footer>|© Created by calove (5/28/2023)|</footer>
+
+    <script>
+        // Fetch the content of menu.html and insert it into the div with id "navbar"
+        fetch('menu.html')
+            .then(response => response.text())
+            .then(data => {
+                // Create a temporary element to parse the fetched HTML
+                const tempDiv = document.createElement('div');
+                tempDiv.innerHTML = data;
+    
+                // Find the menu div within the fetched content
+                const menuContent = tempDiv.querySelector('.menu');
+    
+                // Insert the menu content into the header div if it exists
+                if (menuContent) {
+                    document.getElementById('navbar').appendChild(menuContent);
+                } else {
+                    console.error('Menu content not found in menu.html');
+                }
+            })
+            .catch(error => console.error('Error loading the navbar:', error));
+    </script>
 </body>
 
 </html>
